Fixed the front page events overflow-x issue.

--- a/external/style/events.less
+++ b/external/style/events.less
@@ -231,7 +231,7 @@ body {
 }
 
 .events-front-page ul {
-    min-width: 100vmin;
+    min-width: 90vmin;
     padding-inline-start: 0;
     margin-block-start: 0;
     margin-block-end: 0;
@@ -245,7 +245,7 @@ body {
 .nav-to-event-page-container {
     display: flex;
     justify-content: space-between;
-    width: 100vmin;
+    width: 90vmin;
     margin-right: auto;
     margin-left: auto;
 }
